--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Run tests
         run: npm test
   deploy: # this is the new job for deployment
+    needs: test # this job needs the test job to be completed before starting this job.
     runs-on: ubuntu-latest
-    # needs: test # this job needs the test job to be completed before starting this job.
     steps:
       - name: Get code from repository
         uses: actions/checkout@v4
